# Covid-19-case-study-v1

./: .env.example  .gitignore  Covid 19 case study problems.txt  README.md  covid_19_deaths_v1.csv  covid_19_recovered_v1.csv  main.py  pyproject.toml  requirements.txt
questions/: q1_data_loading.py  q2_data_exploration.py  q3_handling_missing_data.py  q4_data_cleaning.py  q5_independent_analysis.py  q6_data_transformation.py  q7_data_merging.py  q8_combined_analysis.py  q9_ai_insights.py  summary_insights.py
